deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: capstone-app
  namespace: reem-capstone

spec:
  replicas: 2

  strategy:
    canary:
      steps:
        - setWeight: 20

        - pause: {}

        - analysis:
            templates:
              - templateName: error-rate-check

        - setWeight: 50

        - pause:
            duration: 30s

        - setWeight: 100

  selector:
    matchLabels:
      app: capstone-app

  template:
    metadata:
      labels:
        app: capstone-app

    spec:
      containers:
        - name: capstone-app
          image: us-central1-docker.pkg.dev/internship-lab-505207/capstone-repo/capstone-app:3ff671d5b9604d53a40a13595eb039fea35d52b1

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
