service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capstone-service
  namespace: reem-capstone
spec:
  selector:
    app: capstone-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
