ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capstone-ingress
  namespace: reem-capstone
spec:
  rules:
    - host: capstone.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capstone-service
                port:
                  number: 80
